# spacescope-ai

./: .dockerignore  .gitignore  Dockerfile  README.md  requirements.txt
server/: main.py  pyproject.toml
server/config/: settings.py
server/database/: client.py  retriever.py
server/llm_clients/: groq_client.py
server/pipelines/: answer_generator.py  input_processor.py
server/prompt_templates/: templates.py
server/schemas/: llm_schemas.py  route_schemas.py
server/utils/: process_input_query.py
spacescope-ai-client/: package-lock.json  package.json
spacescope-ai-client/src/app/: layout.tsx  page.tsx
spacescope-ai-client/src/components/: Header.tsx  Hero.tsx
