[project]
name = "spacescope-ai-server"
version = "0.1.0"
description = "The backend for spacescope-ai"
requires-python = ">=3.13"
dependencies = [
    "chromadb>=1.0.0",
    "fastapi[all]>=0.115.9",
    "langchain>=0.3.25",
    "langchain-community>=0.3.25",
    "langchain-core>=0.3.65",
    "langchain-groq>=0.3.2",
    "python-dotenv>=1.1.0",
    "uvicorn>=0.34.3",
]
